# ENFify

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
config/: config_carioca.yml  config_dev.yml  default.yml
docs/: mkdocs.yml
enfify/: ENF_Enhancement.py  ENF_preprocessing.py  PDF_and_Plot.py  Rodriguez_Audio_Authenticity.py  __init__.py  _utils.py  analyses.py  augmentation.py  bilstm_classification.py  classification.py  cnn_classification.py  config.py  config.yml  config_nature.yml  config_springer.yml  dataset.py  defaults.yml  enf_enhancement.py  enf_estimation.py  enfify_alpha.py  enfify_nature.py  example_files.py  feature_calculation.py  feature_processing.py  features.py  main.py  networks.py  phase_extraction.py  pipeline.py  preprocessing.py  rodriguez_audio_authenticity.py  synthetic_signals.py  utils.py  visualization.py
enfify-prev/: analyses.py  enf_enhancement.py  enf_estimation.py  enfify_alpha.py  make_samples.py  pipeline.py  preprocessing.py
models/: Rodriguez_models_Wuhan_reference.ipynb  cnn_bilstm_alldata_spatial_scaler.pkl  cnn_bilstm_alldata_temporal_scaler.pkl  onedcnn_model_alldata_86.pth  onedcnn_model_carioca_83.pth
notebooks/: 0.01_lm_synthetic_data.ipynb  0.02_lm_rodriguez_paper.ipynb  0.03_lm_rodriguez_visual_method.ipynb  Discontinuity_detection.ipynb  ENF_estimation_Zhao.ipynb  Frequence_and_phase_extraction.ipynb  Rodriguez_test.ipynb  Synthetic_Data.ipynb  Wuhan_Rodriguez_estimation.ipynb  cut_audiofiles.ipynb  freq_and_phase_error.ipynb  prepare_wuhan_data.ipynb
source/: rodriguez.py  utils.py
sources/: ENF_Enhancement.py  ENF_frequency_phase_estimation.py  ENF_preprocessing.py  PDF_and_Plot.py  Rodriguez_Audio_Authenticity.py  frequency_phase_estimation.py
tests/: test_enf_estimation.py  (+2 more)
(+92 files in other folders)
