[tool.poetry]
name = "enfify"
version = "0.1.0"
description = "Detection of audio manipulation by using electrical network frequency."
authors = ["Licates <136702730+Licates@users.noreply.github.com>, Dacasil <https://github.com/Dacasil>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["enfify"]
force_sort_within_sections = true
